CSS/style.css
* {
    margin: 0px;
    padding: 0px;
}

@media only screen and (max-width:600px) and (orientation:portrait){
    html {
        transform: rotate(90deg);
        transform-origin: left top;
        width: 100vw;
        overflow-x: hidden;
        position: absolute;
        top: 100%;
        left: 0;
    }
  }
  
#container {
    width: 50%;
    height: 100vh;
    float: right;
    background: linear-gradient(rgb(47, 150, 163), rgb(48, 62, 143));
    text-align: center;  
    padding-top: 0.5%;
    padding-bottom: 0.5%;
    margin-top: 0px;
    margin-bottom: 0px;
}

#map-container {
    width: 50%;
    height: 100vh;
    float: left;
    background: linear-gradient(rgb(16, 12, 8), rgb(92, 83, 74));
}

h1 {
    font-size: 2.5rem;
    font-weight: 100;
    font-family: Arial, Helvetica, sans-serif;;
    color: #FFFFFF;
    margin-bottom: 1%;
}
#geo-map {
    width: 75%;
    height: 75%;
    border-radius: 50%;
    margin: 0 auto;
    margin-top: 10%;
}

form {
    font-size: 1.2rem ;
    color:  #FFFFFF;
    font-style: italic;
}

input {
    font-size: 1rem;
    border-radius: 5px;
    margin: 2px;
    background: #FFFFF0;
}

#search {
    border-radius: 50%;
    padding: 5px;
    font-weight: 600;
    color: #0000FF; 
    background: #D3D3D3;
}

